--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -2345,7 +2345,7 @@
 "[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"无错误"
 "[english]VRApplicationError_None"	"No Error"
-"VRApplicationError_AppKeyAlreadyExists"	"应用程序已注册"
+"VRApplicationError_AppKeyAlreadyExists"	"应用程序已被注册过"
 "[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
 "VRApplicationError_NoManifest"	"无应用程序清单"
 "[english]VRApplicationError_NoManifest"	"No application Manifest"
@@ -2365,11 +2365,11 @@
 "[english]VRApplicationError_InvalidApplication"	"Application was invalid"
 "VRApplicationError_LaunchFailed"	"应用程序启动失败"
 "[english]VRApplicationError_LaunchFailed"	"Application launch failed"
-"VRApplicationError_ApplicationAlreadyStarting"	"应用程序已启动"
+"VRApplicationError_ApplicationAlreadyStarting"	"应用程序正在启动中"
 "[english]VRApplicationError_ApplicationAlreadyStarting"	"Application was already starting"
-"VRApplicationError_LaunchInProgress"	"另一款应用程序已启动"
+"VRApplicationError_LaunchInProgress"	"另一款应用程序正在启动中"
 "[english]VRApplicationError_LaunchInProgress"	"Another application was already starting"
-"VRApplicationError_OldApplicationQuitting"	"另一款应用程序已退出"
+"VRApplicationError_OldApplicationQuitting"	"另一款应用程序正在退出"
 "[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
 "VRApplicationError_TransitionAborted"	"用户已中止应用程序启动"
 "[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
