--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -243,7 +243,7 @@
 "[english]MonitorController_RestartSystemNotPossible"	"At this time SteamVR cannot be restarted automatically. \nPlease quit SteamVR and try again. If issues persist, please restart your computer."
 "MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR กำลังประสบปัญหาในการเปิดการใช้งานโหมดเต็มจอ"
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
-"MonitorController_ApplicationsInterfaceNotAvailable"	"ไม่สามารถเริ่ม %1 ได้ อินเตอร์เฟสของแอปพลิเคชันไม่พร้อมใช้งาน"
+"MonitorController_ApplicationsInterfaceNotAvailable"	"ไม่สามารถเริ่ม %1 ได้ อินเตอร์เฟซของแอปพลิเคชันไม่พร้อมใช้งาน"
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
 "MonitorController_ApplicationCouldNotStart"	"ไม่สามารถเริ่ม %1 ได้: %2"
 "[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
@@ -2057,7 +2057,7 @@
 "[english]ScanForBaseStations_Refresh"	"Scan Again"
 "Settings_Advanced_Paths_Header"	"ตำแหน่ง"
 "[english]Settings_Advanced_Paths_Header"	"Paths"
-"Settings_DebugInputBindings"	"เปิดการใช้งานตัวเลือกดีบักในอินเตอร์เฟสผู้ใช้สำหรับการกำหนดปุ่มอุปกรณ์ควบคุม"
+"Settings_DebugInputBindings"	"เปิดการใช้งานตัวเลือกดีบักในอินเตอร์เฟซผู้ใช้สำหรับการกำหนดปุ่มอุปกรณ์ควบคุม"
 "[english]Settings_DebugInputBindings"	"Enable debugging options in the input binding user interface"
 "Settings_Advanced_MotionSmoothing"	"เปิดการใช้งานความเคลื่อนไหวแบบราบรื่น"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable motion smoothing"
