--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -310,7 +310,7 @@
 "[english]Settings_MediumSpace"	"Medium Space"
 "Settings_LargeSpace"	"Büyük Alan"
 "[english]Settings_LargeSpace"	"Large Space"
-"Settings_RemoveAllUSBDevices"	"Tüm SteamVR USB aygıtlarını kaldır"
+"Settings_RemoveAllUSBDevices"	"SteamVR USB aygıtlarını kaldır"
 "[english]Settings_RemoveAllUSBDevices"	"Remove all SteamVR USB devices"
 "Settings_ResetChaperoneToDK2Default"	"Varsayılan Oculus Rift DK2 için Chaperone'u sıfırlayın"
 "[english]Settings_ResetChaperoneToDK2Default"	"Reset Chaperone Data to Oculus Rift DK2 Default"
@@ -1089,9 +1089,9 @@
 "[english]MenuAction_ForceFirmware"	"Force Firmware"
 "MenuAction_DirectMode"	"Direkt Gösterim Modu"
 "[english]MenuAction_DirectMode"	"Direct Display Mode"
-"MenuAction_EnableDirectMode"	"Direkt Gösterim Modu'nu etkinleştir"
+"MenuAction_EnableDirectMode"	"Direkt Modu etkinleştir"
 "[english]MenuAction_EnableDirectMode"	"Enable Direct Display Mode"
-"MenuAction_DisableDirectMode"	"Direkt Gösterim Modu'nu devre dışı bırak"
+"MenuAction_DisableDirectMode"	"Direkt Modu devre dışı bırak"
 "[english]MenuAction_DisableDirectMode"	"Disable Direct Display Mode"
 "MenuAction_PairController"	"Kontrolcü Eşleştir"
 "[english]MenuAction_PairController"	"Pair Controller"
