--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -1907,13 +1907,13 @@
 "[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable advanced supersample filtering"
 "Explanation_SupersamplingFiltering"	"Опції фільтрування надлишкової вибірки"
 "[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options"
-"MenuAction_ReportABug"	"Повідомити про баґ"
+"MenuAction_ReportABug"	"Повідомити про ваду"
 "[english]MenuAction_ReportABug"	"Report a Bug"
 "MessageBox_Submit"	"Надіслати"
 "[english]MessageBox_Submit"	"Submit"
-"BugReporter_Title"	"Повідомити про баґ"
+"BugReporter_Title"	"Повідомити про ваду"
 "[english]BugReporter_Title"	"Report a Bug"
-"BugReporter_Explanation"	"Дякуємо вам за допомогу Valve у поліпшені SteamVR.\n\nЦей доповідач баґів генерує системний звіт SteamVR, що містить інформацію про систему, середовище та журналювання SteamVR, які використовуються Valve під час діагностики."
+"BugReporter_Explanation"	"Дякуємо вам за допомогу Valve у поліпшені SteamVR.\n\nЦей доповідач вад генерує системний звіт SteamVR, що містить інформацію про систему, середовище та журналювання SteamVR, які використовуються Valve під час діагностики."
 "[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
 "BugReporter_ForPersonalSupport"	"Це не квиток служби підтримки, тому ви не отримаєте безпосередньої відповіді. Для отримання персоналізованої підтримки SteamVR від представника, будь ласка, відвідайте сайт служби підтримки."
 "[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
@@ -1927,7 +1927,7 @@
 "[english]BugReporter_Description"	"Description:"
 "BugReporter_ReportType"	"Тип повідомлення:"
 "[english]BugReporter_ReportType"	"Report Type:"
-"BugReporter_ReportType_Bug"	"Баґ"
+"BugReporter_ReportType_Bug"	"Вада"
 "[english]BugReporter_ReportType_Bug"	"Bug"
 "BugReporter_ReportType_FeatureRequest"	"Запит нової функції"
 "[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
@@ -1945,13 +1945,13 @@
 "[english]BugReporter_DescriptionRequired"	"Please supply a description."
 "BugReporter_FailedToCreateZip"	"Не вдалося створити прикріплення ZIP."
 "[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
-"BugReporter_SteamLoginRequired"	"Потрібно увійти до свого акаунта Steam, щоби повідомити про баґ."
+"BugReporter_SteamLoginRequired"	"Потрібно увійти до свого акаунта Steam, щоби повідомити про ваду."
 "[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report a Bug."
 "BugReporter_SubmissionSuccess"	"Надіслано успішно.\n\n Невдовзі ви отримаєте листа з підтвердженням."
 "[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nYou should receive a confirmation email shortly."
-"BugReporter_SubmissionFailure"	"Помилка надсилання.\n\nЗбирач баґів, можливо, зайнятий. Будь ласка, спробуйте надіслати знову.\n\nПомилка: BR-%1\n"
+"BugReporter_SubmissionFailure"	"Помилка надсилання.\n\nЗбирач вад, можливо, зайнятий. Будь ласка, спробуйте надіслати знову.\n\nПомилка: BR-%1\n"
 "[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: BR-%1\n"
-"BugReporter_PreviewReportTitle"	"Повідомлення про баґ — попередній перегляд"
+"BugReporter_PreviewReportTitle"	"Повідомлення про ваду — попередній перегляд"
 "[english]BugReporter_PreviewReportTitle"	"Report a Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"Надсилання…"
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
@@ -2227,9 +2227,9 @@
 "[english]BugReporter_Owner"	"Owner:"
 "BugReporter_Priority"	"Пріоритет:"
 "[english]BugReporter_Priority"	"Priority:"
-"BugReporter_NotAvailable"	"Повідомлення про баґ недоступне в цій версії SteamVR."
+"BugReporter_NotAvailable"	"Повідомлення про ваду недоступне в цій версії SteamVR."
 "[english]BugReporter_NotAvailable"	"Report a Bug is not available on this version of SteamVR."
-"BugReporter_InitializationFailure"	"Не вдалося ініціалізувати повідомлення про баґ.\n\nПомилка: BR-%1"
+"BugReporter_InitializationFailure"	"Не вдалося ініціалізувати повідомлення про ваду.\n\nПомилка: BR-%1"
 "[english]BugReporter_InitializationFailure"	"Report a Bug failed to initialize.\n\nError: BR-%1"
 "Advanced_DirectModeDisabled"	"Прямий режим вимкнено"
 "[english]Advanced_DirectModeDisabled"	"Direct Mode Off"
