--- a/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
@@ -65,7 +65,7 @@
 "[english]Error_TrackingDevice_NoPose_Action"	"More info"
 "VRInitError_Unknown_Header"	"Error de SteamVR"
 "[english]VRInitError_Unknown_Header"	"SteamVR Fail"
-"VRInitError_Unknown_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Unknown_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Unknown_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Unknown_Action"	"Más información"
 "[english]VRInitError_Unknown_Action"	"More info"
@@ -107,7 +107,7 @@
 "[english]VRInitError_Init_InterfaceNotFound_Action"	""
 "VRInitError_Init_InvalidInterface_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_InvalidInterface_Header"	"SteamVR Fail"
-"VRInitError_Init_InvalidInterface_Description"	"Hemos encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_InvalidInterface_Description"	"Hemos encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_InvalidInterface_Description"	"We've encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_InvalidInterface_Action"	"Más información"
 "[english]VRInitError_Init_InvalidInterface_Action"	"More info"
@@ -125,7 +125,7 @@
 "[english]VRInitError_Init_HmdNotFound_Action"	"More info"
 "VRInitError_Init_NotInitialized_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_NotInitialized_Header"	"SteamVR Fail"
-"VRInitError_Init_NotInitialized_Description"	"SteamVR ha detectado problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_NotInitialized_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_NotInitialized_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NotInitialized_Action"	"Más información"
 "[english]VRInitError_Init_NotInitialized_Action"	"More info"
@@ -155,55 +155,55 @@
 "[english]VRInitError_Init_PathRegistryNotWritable_Action"	"More info"
 "VRInitError_Init_AppInfoInitFailed_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"SteamVR Fail"
-"VRInitError_Init_AppInfoInitFailed_Description"	"Un componente crítico de SteamVR no funciona correctamente. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_AppInfoInitFailed_Description"	"Un componente crítico de SteamVR no funciona correctamente. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"A critical component of SteamVR isn't working properly. Please visit SteamVR Support for more info."
 "VRInitError_Init_AppInfoInitFailed_Action"	"Más información"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"More info"
 "VRInitError_Init_Retry_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_Retry_Header"	"SteamVR Fail"
-"VRInitError_Init_Retry_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_Retry_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_Retry_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_Retry_Action"	"Más información"
 "[english]VRInitError_Init_Retry_Action"	"More info"
 "VRInitError_Init_InitCanceledByUser_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_InitCanceledByUser_Header"	"SteamVR Fail"
-"VRInitError_Init_InitCanceledByUser_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_InitCanceledByUser_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_InitCanceledByUser_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_InitCanceledByUser_Action"	"Más información"
 "[english]VRInitError_Init_InitCanceledByUser_Action"	"More info"
 "VRInitError_Init_AnotherAppLaunching_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_AnotherAppLaunching_Header"	"SteamVR Fail"
-"VRInitError_Init_AnotherAppLaunching_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_AnotherAppLaunching_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_AnotherAppLaunching_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_AnotherAppLaunching_Action"	"Más información"
 "[english]VRInitError_Init_AnotherAppLaunching_Action"	"More info"
 "VRInitError_Init_SettingsInitFailed_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_SettingsInitFailed_Header"	"SteamVR Fail"
-"VRInitError_Init_SettingsInitFailed_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_SettingsInitFailed_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_SettingsInitFailed_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_SettingsInitFailed_Action"	"Más información"
 "[english]VRInitError_Init_SettingsInitFailed_Action"	"More info"
 "VRInitError_Init_ShuttingDown_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_ShuttingDown_Header"	"SteamVR Fail"
-"VRInitError_Init_ShuttingDown_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_ShuttingDown_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_ShuttingDown_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_ShuttingDown_Action"	"Más información"
 "[english]VRInitError_Init_ShuttingDown_Action"	"More info"
 "VRInitError_Init_TooManyObjects_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_TooManyObjects_Header"	"SteamVR Fail"
-"VRInitError_Init_TooManyObjects_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_TooManyObjects_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_TooManyObjects_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_TooManyObjects_Action"	"Más información"
 "[english]VRInitError_Init_TooManyObjects_Action"	"More info"
 "VRInitError_Init_NoServerForBackgroundApp_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Header"	"SteamVR Fail"
-"VRInitError_Init_NoServerForBackgroundApp_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_NoServerForBackgroundApp_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_NoServerForBackgroundApp_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NoServerForBackgroundApp_Action"	"Más información"
 "[english]VRInitError_Init_NoServerForBackgroundApp_Action"	"More info"
 "VRInitError_Init_NotSupportedWithCompositor_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Header"	"SteamVR Fail"
-"VRInitError_Init_NotSupportedWithCompositor_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_NotSupportedWithCompositor_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_NotSupportedWithCompositor_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NotSupportedWithCompositor_Action"	"Más información"
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"More info"
@@ -293,7 +293,7 @@
 "[english]VRInitError_IPC_MutexInitFailed_Action"	"More info"
 "VRInitError_IPC_Failed_Header"	"Error de SteamVR"
 "[english]VRInitError_IPC_Failed_Header"	"SteamVR Fail"
-"VRInitError_IPC_Failed_Description"	"Hubo un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_IPC_Failed_Description"	"Se ha producido un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_IPC_Failed_Description"	"There was an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_IPC_Failed_Action"	"Más información"
 "[english]VRInitError_IPC_Failed_Action"	"More info"
@@ -443,7 +443,7 @@
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Perform Room Setup"
 "Lighthouse_UnknownEvent_Header"	"Error de la estación base"
 "[english]Lighthouse_UnknownEvent_Header"	"Base Station Error"
-"Lighthouse_UnknownEvent_Description"	"Algo va mal con tu el seguimiento de SteamVR. Consulta el soporte para SteamVR para más información."
+"Lighthouse_UnknownEvent_Description"	"Algo va mal con el seguimiento de SteamVR. Para más información, visita el Soporte de SteamVR."
 "[english]Lighthouse_UnknownEvent_Description"	"Something is wrong with SteamVR Tracking. Please visit SteamVR Support for more info."
 "Lighthouse_UnknownEvent_Action"	"Más información"
 "[english]Lighthouse_UnknownEvent_Action"	"More info"
@@ -587,7 +587,7 @@
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"If you are only using one base station, tracking quality will improve if you switch this base station to mode A."
 "VRInitError_Init_NotAvailableToUtilityApps_Header"	"Error de SteamVR"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Header"	"SteamVR Fail"
-"VRInitError_Init_NotAvailableToUtilityApps_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Init_NotAvailableToUtilityApps_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NotAvailableToUtilityApps_Action"	"Más información"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"More info"
@@ -667,7 +667,7 @@
 "[english]Popover_BaseStationNoPowerManagement_Description"	"This base station is not designed to support remote power management."
 "VRInitError_Internal_Header"	"Error de SteamVR"
 "[english]VRInitError_Internal_Header"	"SteamVR Fail"
-"VRInitError_Internal_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el soporte para SteamVR."
+"VRInitError_Internal_Description"	"SteamVR ha encontrado un problema inesperado. Para más información, visita el Soporte de SteamVR."
 "[english]VRInitError_Internal_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Internal_Action"	"Más información"
 "[english]VRInitError_Internal_Action"	"More info"
